--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
           device anywhere you like!</span>
       </div>
       <div class="icon-music">
-        <img src="images/icon-music.svg" alt="icon-music">
-        <span>Annual Plan</span> 
+        <div class="planAtual">
+          <img src="images/icon-music.svg" alt="icon-music">
+          <span> <strong>Annual Plan</strong> <br><span class="price">$59.99/year</span></span> 
+        </div>
+        <div class="changeBtn">
+          <a href="#">Change</a>
+        </div>
       </div>
-      <div class="year">
-        <span>$59.99/year</span>
-
-      </div>
-      <div class="chang">
-        <span>Change</span>
       </div>
       <div class="proceed">
-        <span>Proceed to Payment</span>
+        <button>Proceed to Payment</button>
       </div>
       <div class="cancel">
         <span>Cancel Order</span>
